# tdl-spec

./: CLAUDE.md  README.md
docs/: README.md
spec/engine/: README.md
spec/examples/: content_generative_ai.md  engine_v1.2.yaml  instructional_model_bloom8.yaml  instructional_model_pbl.yaml  instructional_model_socratic.yaml  learning_sequence_example.yaml
spec/schemas/: README.md  engine.schema.json  engine.schema.yaml  instructional_model.schema.json  instructional_model.schema.yaml  learning_sequence.schema.json  learning_sequence.schema.yaml
tools/: README.md  pyproject.toml  setup.py
tools/tdl_validator/: __init__.py  cli.py  validator.py
